--- a/.github/workflows/rust_build_test.yaml
+++ b/.github/workflows/rust_build_test.yaml
@@ -1,22 +1,15 @@
 name: RustBuildTest
-
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-env:
-  CARGO_TERM_COLOR: always
-
+  "push": {"branches": ["main"]}
+  "pull_request": {"branches": ["main"]}
+env: {"CARGO_TERM_COLOR": "always"}
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  build_and_test:
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+    "strategy": {"matrix": {"os": [ubuntu-latest, windows-latest, macos-latest]}}
