--- a/.github/workflows/rust_build_test.yaml
+++ b/.github/workflows/rust_build_test.yaml
@@ -12,4 +12,4 @@ jobs:
         run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
-    "strategy": {"matrix": {"os": [ubuntu-latest, windows-latest, macos-latest]}}
+    "strategy": {"matrix": {"os": [ubuntu-latest, macos-latest]}}
