--- a/.github/workflows/rust_build_test.yaml
+++ b/.github/workflows/rust_build_test.yaml
@@ -5,11 +5,9 @@ on:
 env: {"CARGO_TERM_COLOR": "always"}
 jobs:
   build_and_test:
-    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      - name: Build
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose
+      - run: cargo build --verbose
+      - run: cargo test --verbose
+    runs-on: ${{ matrix.os }}
     "strategy": {"matrix": {"os": [ubuntu-latest, macos-latest]}}
