--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,4 +20,4 @@ jobs:
           cargo publish
           --verbose
           --locked
-          --token ${{ secrets.CARGO_PUBLISH_API_TOKEN }}
+          --token ${{ secrets.CARGO_API_TOKEN }}
